// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesList when no expense is there 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpensesList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={120}
      createdAt={0}
      description="Coffee"
      id="1"
      key="1"
      note="Friends forced me into buying a coffee for everyonee"
    />
    <ExpenseListItem
      amount={35}
      createdAt={345600000}
      description="Tea"
      id="2"
      key="2"
      note="Everyone drinks it so i drink it too what's the problem"
    />
    <ExpenseListItem
      amount={70}
      createdAt={-345600000}
      description="Tang"
      id="3"
      key="3"
      note="It is the season of summer and we must drink refreshing things in it"
    />
  </div>
</div>
`;
